--- a/index.html
+++ b/index.html
@@ -10,21 +10,16 @@
     <!-- HEADER -->
     <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
+    <h3>Where A Traditional Past Meets A Modern Future.</h3>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src="images/transit.jpg" 
     </div>
   </div>
 </body>
 </html>
 
-HEADING
-
-``
-
-SUB HEAD
-
-`Where A Traditional Past Meets A Modern Future.`
 
 IMAGE 1 FILE
 
