--- a/index.html
+++ b/index.html
@@ -15,21 +15,15 @@
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="images/transit.jpg" alt="Modern Transit">
-      <
-      
+      <h4>Travel</h4>
+      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.</p>
+      <h4>History</h4>
+      <p></p>
       
     </div>
   </div>
 </body>
 </html>
-
-SMALLER SUB HEAD
-
-`Travel`
-
-PARAGRAPH 1
-
-`Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.`
 
 SMALLER SUB HEAD
 
